# TestBase

./: .gitignore  Dockerfile  README.md
src/more_interfaces/: CMakeLists.txt  package.xml
src/more_interfaces/msg/: Camera.msg  Carplate.msg  Trials1.msg
src/more_interfaces/srv/: Alert.srv  Arduino1.srv  Comms.srv  Error.srv  Mission.srv  String.srv  Timer.srv  Trigger.srv
src/my_drone_bringup/: CMakeLists.txt  package.xml
src/my_drone_bringup/launch/: drone_app.launch.py
src/my_station_pkg/: package.xml  setup.cfg  setup.py
src/my_station_pkg/my_station_pkg/: Batteryholder.py  Camera_control.py  Camera_streamer.py  Camera_streamer2.py  Camera_streamer3.py  Plate_detention.py  add_vehicle.py  ai_node.py  api_update_node.py  arduino_node.py  auto_mode.py  box_select_node.py  dataprocessing.py  drone.py  drone_comms_node.py  drone_comms_node2  drone_comms_node3  drone_comms_node4  error_tracking_node.py  img_processing_node.py  ip_cam.py  ip_cam_ai.py  manual_mode.py  message_receiver_node.py  mission_update.py  missioncomplete.py  newssy.py  platecodereserve  rtk.py  serial.py  serialrecv.py  slave_node.py  store  store_sys  streamer_node.py  sys_controller.py  telemetrypoll_node.py  test.py  timer_node.py  timer_server.py  (+2 more)
